# openrouter-runner

./: .gitignore  .pre-commit-config.yaml  .prettierrc.mjs  .python-version  LICENSE  README.md  example.env  example.env.local  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: e2e.yml  lint.yml  release-prod.yml  test.yml
gcp/shap-e/: Dockerfile  app.py  environment.yml  requirement.txt
modal/: mythalion-13b.py  mythalion.py  mythomax-13b.py  mythomax.py  pyproject.toml
modal/aux/: README.md  TODO.md  __init__.py  download.py  main.py
modal/aux/containers/: __init__.py  vllm_13b.py
modal/aux/endpoints/: completion.py
modal/aux/engines/: vllm.py
modal/aux/models/: __init__.py  mythalion_13b.py  mythomax_13b.py  nous_hermes_13b.py
modal/aux/shared/: common.py  download.py  image.py  volume.py
modal/auxilary/: TODO.md  main.py
modal/auxilary/models/: llama2_chat_13b.py  mythalion_13b.py  remm_slerp_13b.py
modal/auxilary/shared/: common.py  image.py
modal/punctuator/: __init__.py
modal/runner/: README.md  __init__.py  api.py
modal/runner/containers/: __init__.py  hermes_llava.py  lorean_7b.py  vllm_13b.py  vllm_7b.py  vllm_a100_128k.py  vllm_a100_200k.py  vllm_a100_32k.py  vllm_awq.py  vllm_mid.py  vllm_top.py  vllm_unified.py
modal/runner/endpoints/: completion.py  models.py
modal/runner/engines/: base.py  lorean.py  vllm.py
modal/runner/shared/: clean.py  common.py  download.py  protocol.py  quantize.py  sampling_params.py
modal/shap-e/: __init__.py
modal/shared/: config.py  cpu_endpoint.py  download.py  gpu_model.py  images.py  logging.py  protocol.py  test_config.py  utils.py  volumes.py
modal/tests/: common.py  test_test_helpers.py
modal/tests/data/: steve_jobs_speech.txt
modal/tests/runner/endpoints/: test_completion.py
modal/tests/shared/: test_config.py
modal/tuner/: README.md  __init__.py
modal/tuner/containers/: mistral_7b_lora.py
modal/tuner/endpoints/: create_lora.py  list_lora.py
modal/tuner/shared/: common.py
modal/vllm_runner/: auxilary_13b.py  longchat_13b.py  mythalion_13b.py  mythomax_13b.py  mythserver_13b.py
modal/vllm_runner/shared/: config.py  cpu_endpoint.py  gpu_model.py  protocol.py  sampling_params.py  utils.py
scripts/: 0.txt  get-words.ts  shared.ts  test-add-model.ts  test-alpaca.ts  test-batch-size.ts  test-dynamic-model.ts  test-large-prompt.ts  test-lora.ts  test-modal.ts  test-mythalion.ts  test-mythomax.ts  test-punctuator.ts  test-simple.ts  test-throughput.ts
