[tool.poetry]
name = "openrouter-runner-modal"
version = "0.1.0"
description = "OpenRouter runner on Modal backend"
authors = ["OpenRouter <support@openrouter.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
huggingface-hub = "^0.17.1"
modal = "^0.56.4225"
transformers = "^4.34.1"
bitsandbytes = "^0.41.1"
peft = "^0.5.0"
accelerate = "^0.23.0"
datasets = "^2.14.5"
scipy = "^1.11.3"
wandb = "^0.15.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by ruff formatter already
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
